po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-23 18:52+0000\n"
+"PO-Revision-Date: 2016-05-24 14:14+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -261,7 +261,7 @@ msgstr "E-maildomein moet een geldige opmaak hebben (bijv. 'example.com')."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Localpart"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -932,7 +932,7 @@ msgstr "Uw wijzigingen zijn opgeslagen."
 #: CRM/Admin/Form/PreferencesDate.php
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "Start Offset"
-msgstr ""
+msgstr "Begin offset"
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Format"
@@ -1278,21 +1278,21 @@ msgstr "Mail vertragingstijd"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer Job Size"
-msgstr "Mail Job Grootte"
+msgstr "Mail taakgrootte"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer CRON job limit"
-msgstr "Mail cron job limiet"
+msgstr "Mail cron-taak limiet"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "The job size must be at least 1000 or set to 0 (unlimited)."
-msgstr "De grootte van de job moet minstens 1000 zijn (of 0 : onbeperkt)."
+msgstr "De grootte van de taak moet minstens 1000 zijn (of 0 : onbeperkt)."
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid ""
 "A job size smaller than the batch limit will negate the effect of the batch "
 "limit."
-msgstr "Als de grootte van de job kleiner is dan de batch limiet, dan heeft dat een negatieve invloed op het effect van de batch limiet."
+msgstr "Als de grootte van de taak kleiner is dan de batchlimiet, dan heeft dat een negatieve invloed op de batchlimiet."
 
 #: CRM/Admin/Form/Setting/Mapping.php
 msgid "Settings - Mapping and Geocoding Providers"
@@ -2351,7 +2351,7 @@ msgstr "Verbinding verbroken"
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr ""
+msgstr "Er wordt een pop-up \"%1\" geopend. Controleer uw webbrowser als dit niet gebeurt."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
@@ -2381,7 +2381,7 @@ msgstr "Veld(en)"
 msgid ""
 "For in-depth details about entities and actions, see the <a href='%1' "
 "target='%2'>API Explorer</a>."
-msgstr ""
+msgstr "Voor gedetailleerde informatie over entiteiten en acties, lees de <a href='%1' target='%2'>API Explorer</a>."
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
@@ -3217,7 +3217,7 @@ msgstr "Aanduiding voor de relatie van contact B naar contact A. VOORBEELD: cont
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid ""
 "WARNING: You are about to delete the Reminder titled <strong>%1</strong>."
-msgstr ""
+msgstr "Waarschuwing: U staat op het punt om de herinnering <strong>%1</strong> te verwijderen."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
@@ -3225,7 +3225,7 @@ msgstr "Herhalen inschakelen."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
-msgstr ""
+msgstr "U kunt handmatig herinneringen verzenden naar deze ontvangers."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
@@ -3692,7 +3692,7 @@ msgid ""
 "lower value if your server has multiple cron jobs running simultaneously, "
 "but do not use values smaller than 1,000. Enter \"0\" to disable multi-"
 "threading and process mail as one single job - batch limits still apply."
-msgstr "Indien u uw jobs wil splitsen in gelijktijdig verwerkte jobs, geef dan de grootte van de jobs op (0: geen splitsing, alle mail wordt in een job verwerkt, wel met de geldende limieten). Aanbevolen wordt een waarde tussen de 1,000 en 10,000. Als er meerdere cron jobs op de server actief zijn, gebruik dan een lagere waarde, maar niet een waarde onder de 1000."
+msgstr "Indien u uw taak wil splitsen in taken die gelijktijdig verwerkt worden, geef dan de grootte van de taak op (0: geen splitsing, alle mail wordt in een taak verwerkt, wel met de geldende limieten). Aanbevolen wordt een waarde tussen de 1,000 en 10,000. Als er meerdere cron-taken op de server actief zijn, gebruik dan een lagere waarde, maar geen waarde onder de 1000."
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
@@ -4065,7 +4065,7 @@ msgid ""
 "that are not in Completed status prior to running the mailing cron job for "
 "the first time. This will ensure that test mailings are not actually sent "
 "out."
-msgstr "LET OP: U schakelt over van testomgeving (Opslaan in database) naar een productie-omgeving. Controleer Mailings > Gearchiveerde mailings, verwijder alle mailings die betrekking hebben op het testen en die nog niet afgerond zijn voordat u de mailing cron job voor de eerste keer uitvoert. Hiermee voorkomt u dat de test mailings worden verzonden."
+msgstr "LET OP: U schakelt over van testomgeving (Opslaan in database) naar een productie-omgeving. Controleer Mailings > Gearchiveerde mailings, verwijder alle mailings die betrekking hebben op het testen en die nog niet afgerond zijn voordat u de mailing cron-taak voor de eerste keer uitvoert. Hiermee voorkomt u dat er test-mailings worden verzonden."
 
 #: templates/CRM/Admin/Form/Setting/UF.tpl
 msgid "These settings define the CMS variables that are used with CiviCRM."
@@ -5104,7 +5104,7 @@ msgstr "Er zijn geen achtergrondtaken ingesteld. "
 
 #: templates/CRM/Admin/Page/Job.tpl
 msgid "(Job parameters and command line syntax documentation...)"
-msgstr "(Job parameters en commandoregel documentatie...)"
+msgstr "(Taakparameters en commandoregel documentatie...)"
 
 #: templates/CRM/Admin/Page/JobLog.tpl
 msgid ""
@@ -6436,7 +6436,7 @@ msgid ""
 "              The result will land on the same day of the month except for days 29-31 when the target month contains fewer days than the previous month.\n"
 "              For example, if a job is scheduled to run on August 31st, the following invocation will occur on October 1st, and then the 1st of every month thereafter.\n"
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
-msgstr ""
+msgstr "Relatieve maandwaardes worden berekend op grond van de duur van de tussenliggende maanden.\n              Het resultaat wordt dezelfde dag van de maand, behalve als de oorspronkelijke dag 29, 30 of 31 was en de nieuwe maand minder dagen heeft dan die dag.\n              Voorbeeld: van een op 31 augustus ingeplande taak is de volgende uitvoeringsdatum 1 oktober en daarna steeds op de eerste van de maand.\n              Dit verplaatsen kunt u voorkomen door  taken die per maand of per kwartaal zijn uiterlijk de 28e dag van de maand in te plannen."
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6448,11 +6448,11 @@ msgstr "Onbeperkt"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
-msgstr ""
+msgstr "Na menu-item"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Before menu element"
-msgstr ""
+msgstr "Voor menu-item"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
@@ -6460,7 +6460,7 @@ msgstr "Scheidingsteken"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
-msgstr ""
+msgstr "Hoogste niveau"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Access Control by Financial Type"
@@ -6476,7 +6476,7 @@ msgstr "Contacten zonder voorkeurstaal"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipients language"
-msgstr ""
+msgstr "Taal van ontvangers"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "System default language"
@@ -6484,31 +6484,31 @@ msgstr "Standaardtaal systeem"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Follow recipient preferred language"
-msgstr ""
+msgstr "Gebruik voorkeurstaal ontvanger"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Communication language"
-msgstr ""
+msgstr "Taal communicatie"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "The HTML message is a required field."
-msgstr ""
+msgstr "Het HTML-bericht is een verplicht veld."
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Language for users"
-msgstr ""
+msgstr "Standaardtaal voor gebruikers"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use default site language"
-msgstr ""
+msgstr "Gebruik standaardtaal website"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Leave undefined"
-msgstr ""
+msgstr "Niet definiëren"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use language in use at the time"
-msgstr ""
+msgstr "Gebruik de huidige taal"
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
@@ -6517,7 +6517,7 @@ msgstr "Opslaan mislukt"
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
 "You may need to clear your browser's cache to see the changes in CiviCRM."
-msgstr ""
+msgstr "Om de wijzigingen in CiviCRM te zien kan het noodzakelijk zijn om de cache van uw webbrowser te legen."
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
@@ -6533,15 +6533,15 @@ msgstr "Verbergen"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
-msgstr ""
+msgstr "Herinner mij hier weer over een week aan."
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a month"
-msgstr ""
+msgstr "Herinner mij hier weer over een maand aan."
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Never remind me again"
-msgstr ""
+msgstr "Herinner mij hier niet weer aan."
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
@@ -6563,15 +6563,15 @@ msgstr "Permanent verborgen"
 msgid ""
 "Do not run this job before this date / time. The run frequency selected "
 "above will apply thereafter."
-msgstr ""
+msgstr "Voer deze taak niet uit voor dit tijdstip. Daarna geldt de hierboven geselecteerde frequentie van uitvoering."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run as soon as possible."
-msgstr ""
+msgstr "Leeglaten om het zo snel als mogelijk uit te laten voeren."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run at next run frequency."
-msgstr ""
+msgstr "Leeglaten om het volgens planning uit te laten voeren."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
@@ -6582,25 +6582,25 @@ msgid ""
 "Enabling Access Control by Financial Types is only required if you need users in one role to access some financial transactions but not ones with certain financial types.</p>\n"
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
-msgstr ""
+msgstr "Het inschakelen van toegangsconrole bij financiele types is alleen nodig indien u een groep gebruikers toegang wilt geven tot enkele financiele transacties maar niet voor bepaalde financiele types.</p>\n<p>Voorbeeld: een geplande gift kan vertrouwelijk zijn en verborgen moeten blijven voor georganiseerde gebeurtenissen van de staf, maar ze moeten wel betalingen kunnen verwerken van toegangskaarten.</p>\n<p>Na het inschakelen, kunt u voor elk financieel type beheerdersrechten instellen via Beheer  > Gebruikers en rechten > Machtigingen (toegangsbeheer), kies vervolgens de link toegangsbeheer van uw CMS."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "A \"WYSIWYG\" (What You See Is What You Get) is a rich-text editor, like a "
 "mini word-processor, for editing HTML content in CiviCRM."
-msgstr ""
+msgstr "Een \"WYSIWYG\" (What You See Is What You Get) is een tekstverwerker waar je direct ziet hoe het er uit komt te zien. U kunt in CiviCRM er de HTML-inhoud mee wijzigen."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'CKEditor' for the built-in WYSIWYG option. You can customize the "
 "toolbar buttons and other settings by clicking \"Configure CKEditor.\""
-msgstr ""
+msgstr "Selecteer 'CKEditor' voor de interne WYSIWYG-optie. U kunt de instellingen van deze tekstverwerker wijzigen door te klikken op \"CKEditor configureren.\""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'Textarea' if you want users to type text and/or HTML code into plain"
 " text fields."
-msgstr ""
+msgstr "Selecteer 'Tekstvak' als u wilt dat gebruikers tekst en/of HTML-code invoeren in een gewoon tekstveld."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6659,7 +6659,7 @@ msgstr "Standaardtaal (indien gewenst) voor contactrecords."
 msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
-msgstr ""
+msgstr "(Meertalige ondersteuning kan op dit moment niet worden ingeschakeld voor installaties waar logging is ingeschakeld.) "
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
@@ -6668,11 +6668,11 @@ msgid ""
 "Please read the %1 documentation, and make sure you understand it before "
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
-msgstr ""
+msgstr "Deze instellingen worden gebruikt door de optionele CiviMail component en deze instellingen kunnen de performance aanmerkelijk verbeteren. Lees eerst de %1 documentatie, pas de standaardwaarden alleen aan als u weet wat u doet. (Deze instelling worden niet gebruikt voor de interne functie 'E-mail - nu versturen')."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
-msgstr ""
+msgstr "Pad-variabelen"
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 #: templates/CRM/Admin/Form/Setting/Url.hlp
@@ -6686,19 +6686,19 @@ msgstr "Deze variabelen worden automatisch bepaald in <tt>civicrm.settings.php</
 msgid ""
 "You may configure these upload directories using absolute paths or path "
 "variables."
-msgstr ""
+msgstr "U kunt deze uploadmappen configureren door absolute paden of pad-variabelen te gebruiken."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "If you modify the defaults, make sure that your web server has write access "
 "to the directories."
-msgstr ""
+msgstr "Als u de standaardwaarden wijzigt, zorg er dan voor dat uw webserver schrijftoegang heeft tot de mappen."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
 "When migrating a site to a new server, the paths and URLs of your CiviCRM "
 "installation may change. "
-msgstr ""
+msgstr "Bij het overzetten van een website naar een andere server, kunnen de paden en de URL's van de CiviCRM-installatie gewijzigd worden."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
@@ -6706,7 +6706,7 @@ msgid ""
 "form to clear caches or to reset paths to their defaults. If you need "
 "further customizations, then update the <a href=\"%1\">Directories</a> and "
 "<a href=\"%2\">Resource URLs</a>."
-msgstr ""
+msgstr "Mogelijk zijn de oude paden en URL's opgeslagen in enkele database-records. Gebruik dit scherm om de caches te wissen en de paden terug te zetten naar de standaardwaarden. Als u meer wijzigingen nodig heeft, wijzig dan de <a href=\"%1\">Mappen</a> en <a href=\"%2\">Bron-URLs</a>."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -6813,11 +6813,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Join on:"
-msgstr ""
+msgstr "Lid sinds: "
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
-msgstr ""
+msgstr "Skin"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
