po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-05-19 09:49+0000\n"
+"PO-Revision-Date: 2016-05-24 18:24+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1065,7 +1065,7 @@ msgstr "Titel"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Event's Title"
-msgstr "Evenementtitel"
+msgstr "De titel van het evenement"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Summary"
