--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
+"PO-Revision-Date: 2016-05-24 18:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -2394,7 +2394,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
-msgstr "Synchroniser %1 utilisateurs"
+msgstr "Synchroniser les utilisateurs %1"
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize Users to Contacts:"
