po: update po/it_IT/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/admin.po
+++ b/po/it_IT/admin.po
@@ -10,6 +10,7 @@
 # Francesco Moretto <francesco@moretto.it>, 2015
 # grdndr <gardo_jr@yahoo.it>, 2014
 # mitch.camp <kal-el@hotmail.it>, 2012
+# Leonardo Armando Iarrusso <loppo9@hotmail.com>, 2016
 # Marco Mapelli <marco.mapelli@slamservice.it>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 19:02+0000\n"
+"Last-Translator: Leonardo Armando Iarrusso <loppo9@hotmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -69,7 +70,7 @@ msgstr "Installa"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Installare \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
@@ -77,7 +78,7 @@ msgstr "Scarica e Installa"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Scaricare e Installare \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -85,15 +86,15 @@ msgstr "Disinstalla"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Disinstallare \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Abilitare \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Disabilitare \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
@@ -225,7 +226,7 @@ msgstr "Il Formato Etichetta selezionato è stato cancellato."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Copia %1 di %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
@@ -253,7 +254,7 @@ msgstr "Il tipo di recapito \"%1\" è stato salvato."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Account Email"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
@@ -278,15 +279,15 @@ msgstr "'Rispondi a' deve essere in un formato di indirizzo email valido."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Server"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
-msgstr ""
+msgstr "Elaborazione Rimbalzo"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email-to-Activity Processing"
-msgstr ""
+msgstr "Elaborazione Email-to-Activity"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
@@ -315,7 +316,7 @@ msgstr "Le modifiche non sono state salvate"
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "Mappatura Campo"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -375,7 +376,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "%1 Option"
-msgstr ""
+msgstr "Opzione %1"
 
 #: CRM/Admin/Form/Options.php
 msgid ""
@@ -397,11 +398,11 @@ msgstr "Nome di Classe"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "Contatti E Casi"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
-msgstr ""
+msgstr "Solo Casi"
 
 #: CRM/Admin/Form/Options.php
 msgid "Default Option?"
@@ -466,7 +467,7 @@ msgstr "Prego inserire un URL valido"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Type"
-msgstr ""
+msgstr "Tipo di Sistema di Pagamento"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor active?"
@@ -486,11 +487,11 @@ msgstr "Prego specificare almeno il nome utente"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Deleted."
-msgstr ""
+msgstr "Sistema di Pagamento Eliminato"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment processor %1 has been saved."
-msgstr ""
+msgstr "Il Sistema di Pagamento %1 è stato salvato."
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a positive integer"
@@ -656,7 +657,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Petition Signers Group"
-msgstr ""
+msgstr "Gruppo Firmatari della Petizione"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid ""
