--- a/po/ro_RO/event.po
+++ b/po/ro_RO/event.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 17:48+0000\n"
+"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +21,7 @@ msgstr ""
 #: CRM/Event/BAO/Event.php CRM/Event/Cart/Form/Checkout/Payment.php
 #: CRM/Event/Form/Participant.php CRM/Event/Form/ParticipantFeeSelection.php
 msgid "confirmation"
-msgstr ""
+msgstr "confirmare"
 
 #: CRM/Event/BAO/Event.php
 msgid "Cannot find participant ID"
@@ -28,7 +29,7 @@ msgstr ""
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr ""
+msgstr "Acest eveniment este plin"
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
@@ -640,7 +641,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Thank You for Registering"
-msgstr ""
+msgstr "Mulțumim pentru inregistrare"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid ""
@@ -3737,7 +3738,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Multumesc"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
@@ -3762,7 +3763,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Submit"
-msgstr ""
+msgstr "Trimite"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Please select Transfer OR Cancel action."
