--- a/po/ro_RO/member.po
+++ b/po/ro_RO/member.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 17:21+0000\n"
+"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -147,7 +148,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
-msgstr ""
+msgstr "Membru primar ?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Pay Later?"
@@ -155,7 +156,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew?"
-msgstr ""
+msgstr "Reinoieste automat?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is a Test?"
@@ -391,7 +392,7 @@ msgstr ""
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment From"
-msgstr ""
+msgstr "Plata de la "
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Send Confirmation and Receipt?"
