--- a/po/ro_RO/countries.po
+++ b/po/ro_RO/countries.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # pitzy2014 <adp2005rocks@gmail.com>, 2014
+# Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tiberiu manolache <tiberiu.manolache@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 17:49+0000\n"
+"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -605,7 +606,7 @@ msgstr "Statele Federate ale Microneziei"
 
 msgctxt "country"
 msgid "Moldova"
-msgstr ""
+msgstr "Republica Moldova"
 
 msgctxt "country"
 msgid "Monaco"
