--- a/po/ro_RO/menu.po
+++ b/po/ro_RO/menu.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sergiu <vandenboosch@mail.ru>, 2015
 # tiberiu manolache <tiberiu.manolache@gmail.com>, 2016
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 17:46+0000\n"
+"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,27 +32,27 @@ msgstr "Campanie Nouă"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Survey"
-msgstr ""
+msgstr "Sondaj Nou"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Conduct Survey"
-msgstr ""
+msgstr "Conduct Sondaj"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Types"
-msgstr ""
+msgstr "Tipuri de Sondaje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaign Types"
-msgstr ""
+msgstr "Tipuri de Campanie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaign Status"
-msgstr ""
+msgstr "Starea Campaniei"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -366,7 +367,7 @@ msgstr "Vizualizare activitate"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Activities"
-msgstr ""
+msgstr "Găsește activitate"
 
 msgctxt "menu"
 msgid "Custom Data"
@@ -469,7 +470,7 @@ msgstr "Tipuri locaţii (Acasă, Servici, ...)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Website Types"
-msgstr ""
+msgstr "Tip de website"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -488,12 +489,12 @@ msgstr "Tip Telefon"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display Preferences"
-msgstr ""
+msgstr "Arata preferintele"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Search Preferences"
-msgstr ""
+msgstr "Cauta preferintele"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -518,7 +519,7 @@ msgstr "Gestionare Căutări Personalizate"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Organization Address and Contact Info"
-msgstr ""
+msgstr "Adresa organizației și datele de contact"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -573,7 +574,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Languages, Currency, Locations"
-msgstr ""
+msgstr "Limba,moneda,locatie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -587,7 +588,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Preferred Languages"
-msgstr ""
+msgstr "Limbiile preferate"
 
 msgctxt "menu"
 msgid "Access Control"
@@ -746,7 +747,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "New Mass SMS"
-msgstr ""
+msgstr "SMS in masa nou"
 
 msgctxt "menu"
 msgid "Badge Layout"
@@ -981,7 +982,7 @@ msgstr "Răsfoieşte fişierele încărcate"
 
 msgctxt "menu"
 msgid "Delete File"
-msgstr ""
+msgstr "Stere fila"
 
 msgctxt "menu"
 msgid "Log out"
@@ -1034,7 +1035,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Current and Upcoming Events"
-msgstr ""
+msgstr "Evenimente din prezent și viitoare"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1092,7 +1093,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Event Location"
-msgstr ""
+msgstr "Locația evenimentului"
 
 msgctxt "menu"
 msgid "Event Fees"
@@ -1231,7 +1232,7 @@ msgstr "Mailing Eveniment"
 
 msgctxt "menu"
 msgid "Schedule Mailing"
-msgstr ""
+msgstr "Progameaza mailing"
 
 msgctxt "menu"
 msgid "View Mailing"
@@ -1353,7 +1354,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Home"
-msgstr ""
+msgstr "Acasa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1368,7 +1369,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contacts"
-msgstr ""
+msgstr "Contacte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1378,7 +1379,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Email"
-msgstr ""
+msgstr "Email Nou"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1388,12 +1389,12 @@ msgstr "Gestionare Etichete (Categorii)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Dashboard"
-msgstr ""
+msgstr "Panou Central"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution Reports"
-msgstr ""
+msgstr "Raportul contributilor"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1443,7 +1444,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailings"
-msgstr ""
+msgstr "Trimiteri de Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1463,7 +1464,7 @@ msgstr "Corespondenţă arhivată"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Reports"
-msgstr ""
+msgstr "Raportul trimiterilor de Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1498,7 +1499,7 @@ msgstr "Campanii"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Surveys"
-msgstr ""
+msgstr "Sondaje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1583,7 +1584,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "FROM Email Addresses"
-msgstr ""
+msgstr "De la Email Addresses"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1693,7 +1694,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "All Reports"
-msgstr ""
+msgstr "Toate Raporturile"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1753,7 +1754,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Reports"
-msgstr ""
+msgstr "Rapoarte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1818,7 +1819,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution Details"
-msgstr ""
+msgstr "Detalii contributii"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2059,7 +2060,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Attendee List"
-msgstr ""
+msgstr "Lista cu participanti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2109,7 +2110,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Opened"
-msgstr ""
+msgstr "Mailuri deschise"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2124,7 +2125,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display clicks from each mailing"
-msgstr ""
+msgstr "Arata clicuri de la fiecare mailing"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
