--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-24 14:14+0000\n"
+"PO-Revision-Date: 2016-05-25 12:04+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4181,7 +4181,7 @@ msgid ""
 "Using https to connect to secure.authorize.net insures that the connection "
 "is encrypted, but it's possible that CiviCRM is actually connecting to an "
 "attacker and the attacker is connecting to secure.authorize.net."
-msgstr "Voorbeeld: Om betalingen met Authorize.net te kunnen doen, moet CiviCRM een verzoek doen bij https://secure.authorize.net/gateway/transact.dll. Door https te gebruiken worden de gegevens versleuteld verzonden. Het is wel mogelijk dat CiviCRM eigenlijk contact maakt met een bedrieger die zelf contact maakt met secure.authorize.net."
+msgstr "Voorbeeld: Om betalingen met Authorize.net te kunnen doen, moet CiviCRM een verzoek doen bij https://secure.authorize.net/gateway/transact.dll. Door https te gebruiken worden de gegevens versleuteld verzonden. Het is wel mogelijk dat CiviCRM eigenlijk contact maakt met een oplichter die zelf contact maakt met secure.authorize.net."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -6716,7 +6716,7 @@ msgid ""
 "and configure your webserver to support SSL connections. Consult your "
 "hosting provider or web-server documentation for more information on "
 "obtaining and installing SSL certificates."
-msgstr ""
+msgstr "Als u een betaalmethode gebruikt waarmee creditcard en betalingsgegevens <strong>op uw website</strong> verzameld worden is het sterk aan te raden om een <strong>SSL-certificaat</strong> aan te maken of aan te schaffen en uw webserver zo te configureren dat deze SSL-verbindingen ondersteunt. Raadpleeg uw hostingprovider of de documentatie van uw webserver voor meer informatie over het verkrijgen en installeren van SSL-certificaten."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -6725,7 +6725,7 @@ msgid ""
 "Using https to connect to secure2.authorize.net insures that the connection "
 "is encrypted, but it's possible that CiviCRM is actually connecting to an "
 "attacker and the attacker is connecting to secure2.authorize.net."
-msgstr ""
+msgstr "Voorbeeld: Om betalingen met Authorize.net te kunnen doen, moet CiviCRM een verzoek doen bij https://secure2.authorize.net/gateway/transact.dll. Door https te gebruiken worden de gegevens versleuteld verzonden. Het is wel mogelijk dat CiviCRM eigenlijk contact maakt met een oplichter die zelf contact maakt met secure2.authorize.net."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL Variables"
@@ -6739,20 +6739,20 @@ msgstr "Deze instellingen definiëren de URL's die gebruikt worden om de bestand
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid "You may configure these settings using absolute URLs or URL variables."
-msgstr ""
+msgstr "U kunt deze instellingen configureren met met abslute URL's of met URL-variabelen."
 
 #: templates/CRM/Admin/Form/WordReplacements.hlp
 msgid ""
 "Change all occurrences of a word or phrase in CiviCRM screens (e.g. replace "
 "all occurrences of 'Contribution' with 'Donation')."
-msgstr ""
+msgstr "Vervang alle voorkomens van een woord of meerdere woorden in CiviCRM-schermen (Bijvoorbeeld: vervang 'Bijdrage' door 'Donatie')."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurrences of 'Contribution'"
 " with 'Donation')."
-msgstr ""
+msgstr "Gebruik <strong>Woordvervangingen</strong> om een woord of een woordgroep overal waar die in CiviCRM-schermen voorkomt te vervangen (bijv. vervang overal 'Bijdrage' door 'Donatie')."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
@@ -6760,19 +6760,19 @@ msgstr "API-chaining"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Chains allow you to execute api calls on the results of this one."
-msgstr ""
+msgstr "Ketenen maakt het mogelijk om een api-call uit te voeren op basis van het resultaat van deze functie."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: When creating a contact, you can chain the Email.create api to add "
 "email addresses for them."
-msgstr ""
+msgstr "Voorbeeld: Als er een contact wordt aangemaakt kan je de api Email.api ketenen aan het aanmaken van een e-mailadres voor het contact."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Disambiguation: api chains are different from joins in that chaining "
 "executes a separate api call for every result returned from the main call."
-msgstr ""
+msgstr "Toelichting: deze zogenoemde api-chains  verschillen van joins omdat bij chains een afzonderlijke api-call voor elk resultaat van de oorspronkelijke call, wordt uitgevoerd. "
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Joins"
@@ -6781,25 +6781,25 @@ msgstr "API-joins"
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Join this api call to return values from or filter on a related entity."
-msgstr ""
+msgstr "Join deze api-call om de resultaten van een gerelateerde entiteit terug te geven of te filteren."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "The new fields will be selectable from the \"Params\" and \"Fields to "
 "return\" lists."
-msgstr ""
+msgstr "De nieuwe velden zijn te selecteren in de lijsten \"Parameters\" en \"Uitvoervelden\". "
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: If the api entity is Email, you can also fetch the display name of "
 "the contact this email belongs to."
-msgstr ""
+msgstr "Voorbeeld: Als de api-entiteit Email is, dan kunt u ook de contactnaam van de eigenaar ophalen."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Disambiguation: Joins are different from api chaining in that joins execute "
 "as a single SELECT query, and only work for api \"get\" operations."
-msgstr ""
+msgstr "Toelichting: Joins verschillen van zogenoemde chains dat een join alleen een enkele SELECT-query uitvoert en dient voor de api-get."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid ""
@@ -6809,7 +6809,7 @@ msgid ""
 "civicrm_financial_trxn tables. Before publishing an extension on civicrm.org"
 " that does any of this, please ask for a special bookkeeping code review for"
 " the extension."
-msgstr ""
+msgstr "Vanwege het belang van de controleerbaarheid wordt het de ontwikkelaars van extensies sterk afgeraden om code te schrijven waarmee de tabellen civicrm_financial_item, civicrm_entity_financial_trxn en civicrm_financial_trxn worden gewijzigd (records toevoegen, wijzigen of verwijderen). Als u dit toch doet en een extensie uitbrengt op civicrm.org, vraag dan eerst om een boekhoudkundige code-review."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Join on:"
@@ -6825,7 +6825,7 @@ msgstr "Plugins"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
-msgstr ""
+msgstr "Selecteer optioneel extra functies"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6833,7 +6833,7 @@ msgid ""
 "recurring basis. Messages used for membership renewal reminders, as well as "
 "event and activity related reminders should be created via <a "
 "href=\"%1\">Schedule Reminders</a>."
-msgstr ""
+msgstr "Met berichtsjablonen kunt u gemakkelijker gelijksoortige e-mails of brieven die vaker gebruikt worden aanmaken. Berichten die gebruikt worden voor het herinneren aan het verlengen van een lidmaatschap, of voor een evenement of activiteit moeten aangemaakt worden via <a href=\"%1\">Herinneringen inplannen</a>."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6841,29 +6841,29 @@ msgid ""
 "However, subscribe, unsubscribe and opt-out messages are configured at <a "
 "href=\"%1\">Administer > CiviMail > Headers, Footers and Automated "
 "Messages</a>."
-msgstr ""
+msgstr "U kunt berichtsjablonen ook gebruiken voor CiviMail (bulk e-mail) inhoud. Echter de berichten voor het aanmelden, het afmelden en het uitschrijven worden geconfigureerd via <a href=\"%1\">Beheer > CiviMail >Kop- en voetteksten en automatische berichten</a>."
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr ""
+msgstr "Opschonen rapporten-menu"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
 "This will add links for all currently active reports to the \"Reports\" menu"
 " under the relevant component. If you have added report instances to other "
 "menus, they will be moved to \"Reports\".  Are you sure?"
-msgstr ""
+msgstr "Hierdoor worden er links toegevoegd bij alle actieve rapporten in het menu \"Rapporten\" bij de relevante component. Als er rapporten zijn toegevoegd aan andere menu's dan worden ze verplaatst naar \"Rapporten\". Weet u het zeker?"
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "You can limit the recipient of the reminder to contacts with the specified "
 "preferred language. You can also choose to add contacts that have no "
 "preferred language defined."
-msgstr ""
+msgstr "U kunt de ontvangers van de herinnering beperken tot contacten met de aangegeven voorkeurstaal. U kunt ook kiezen om contacten toe te voegen die geen voorkeurstaal hebben aangegeven."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "This is the communication language. If there are template translation or "
 "tokens, they will be localized accordingly. By default, the system default "
 "language will be used."
-msgstr ""
+msgstr "Dit is de taal voor de communicatie.  Als er sjabloon-vertalingen of tokens zijn, dan wordt deze taal gebruikt. Standaard wordt de standaardtaal van het systeem gebruikt."
