--- a/po/zh_CN/event.po
+++ b/po/zh_CN/event.po
@@ -27,12 +27,13 @@
 # walkenaway <ashkandilothar@gmail.com>, 2015
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:51+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3497,7 +3498,7 @@ msgstr ""
 msgid ""
 "Click <a %1>Submit Credit Card Event Registration</a> to process a new New "
 "Registration on behalf of the participant using their credit card."
-msgstr ""
+msgstr "点击<a %1>提交信用卡活动报名</a>来处理代表用他们的信用卡参与者的新New Registration。"
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid "Add Event Registration"
