--- a/po/zh_CN/common-base.po
+++ b/po/zh_CN/common-base.po
@@ -30,12 +30,13 @@
 # nonoku <ying0218@gmail.com>, 2012
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:52+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -640,7 +641,7 @@ msgstr "活动受让人"
 #: CRM/Activity/BAO/Query.php CRM/Contact/BAO/Query.php
 #: CRM/Core/BAO/CustomQuery.php
 msgid "%1 %2 %3"
-msgstr ""
+msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
@@ -3019,7 +3020,7 @@ msgstr ""
 
 #: CRM/Contact/Form/CustomData.php
 msgid "%1 %2 Record"
-msgstr ""
+msgstr "%1 %2 记录"
 
 #: CRM/Contact/Form/CustomData.php
 msgid "Save a Copy"
@@ -6854,7 +6855,7 @@ msgstr "已预约群组？"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "DashletID"
-msgstr ""
+msgstr "DashletID"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Domain"
