--- a/po/zh_CN/countries.po
+++ b/po/zh_CN/countries.po
@@ -25,12 +25,13 @@
 # walkenaway <ashkandilothar@gmail.com>, 2015
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:42+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1060,8 +1061,8 @@ msgstr "科索沃"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "圣巴泰勒米"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "圣马丁岛(法属部分)"
