--- a/po/zh_CN/batch.po
+++ b/po/zh_CN/batch.po
@@ -25,12 +25,13 @@
 # walkenaway <ashkandilothar@gmail.com>, 2015
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:46+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,15 +41,15 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr ""
+msgstr "%1 批次"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
-msgstr ""
+msgstr "交易"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "View/Add Transactions to Batch"
-msgstr ""
+msgstr "查看/添加到批发交易"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
