po: update po/zh_CN/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/provinces.po
+++ b/po/zh_CN/provinces.po
@@ -25,12 +25,13 @@
 # walkenaway <ashkandilothar@gmail.com>, 2015
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:36+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1900,7 +1901,7 @@ msgstr "布尔加斯"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "多布里奇"
 
 msgctxt "province"
 msgid "Gabrovo"
@@ -1912,15 +1913,15 @@ msgstr "哈斯科沃"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "扬博尔"
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "克尔贾利"
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "丘斯滕迪尔"
 
 msgctxt "province"
 msgid "Lovech"
@@ -15740,15 +15741,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "东约特兰省"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "普吉岛"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "北博滕区"
 
 msgctxt "province"
 msgid "Telangana"
