--- a/po/zh_CN/member.po
+++ b/po/zh_CN/member.po
@@ -8,12 +8,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Qi Zhang <todayhill@gmail.com>, 2012
 # zhiyong zhou <jxsky2002@163.com>, 2011
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-25 14:48+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2280,7 +2281,7 @@ msgstr "%1会籍"
 
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "NO"
-msgstr ""
+msgstr "否"
 
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid ""
