--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-05-13 15:12+0000\n"
+"PO-Revision-Date: 2016-05-26 09:38+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1528,7 +1528,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Auto-renew"
-msgstr ""
+msgstr "Renovació automàtica"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Will this recurring contribution automayically renew?"
