po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -7,13 +7,13 @@
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 15:17+0000\n"
+"PO-Revision-Date: 2016-05-26 10:01+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -216,7 +216,7 @@ msgstr "Descarregar "
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Plantilla de missatge"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -1479,7 +1479,7 @@ msgid ""
 "Select the \"FROM\" Email Address for this mailing from the dropdown list. "
 "Available email addresses are configurable by users with Administer CiviCRM "
 "permission. EXAMPLE: \"Client Services\" &lt;clientservices@example.org&gt;"
-msgstr ""
+msgstr "Seleccioneu l'adreça de correu electrònic del remitent per aquest mailing des de la llista desplegable. Les adreces de correu electrònic disponibles són configurables pels usuaris amb permisos d'administració sobre el CiviCRM. Exemple: \"Serveis al client\" &lt;clientservices@example.org&gt;"
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1502,7 +1502,7 @@ msgid ""
 "You can choose to send BOTH an <strong>HTML</strong> and a plain "
 "<strong>TEXT</strong> version of your mailing, OR you can send a "
 "<strong>TEXT</strong> version only."
-msgstr ""
+msgstr "Podeu escollir d'enviar ambdós, una versió del mailing en <strong>HTML</strong> i una versió  en <strong>text</strong> pla, o podeu enviar només una versió de <strong>text</strong>."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1510,7 +1510,7 @@ msgid ""
 "If you create only an <strong>HTML</strong> version, CiviMail will "
 "automatically create a <strong>TEXT</strong> version for your recipients who"
 " have chosen NOT to receive HTML email."
-msgstr ""
+msgstr "Si creeu només una versió <strong>HTML</strong>, el CiviMail automàticament crearà una versió en format <strong>text</strong> pels destinataris que hagin escollit no rebre correus electrònics en format HTML."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1527,7 +1527,7 @@ msgid ""
 "re-usable <strong>message footer</strong>. Refer to the online documentation"
 " for details on how to include required links and contact information as "
 "well as sample messages."
-msgstr ""
+msgstr "Els missatges de correu electrònic del CiviMail han d'incloure un enllaç de <strong>baixa</strong> (\"Baixa via pàgina web\"), i el <strong>codi postal</strong> de la vostra organització. Aquests elements ajuden a reduir les possibilitats que el vostre correu electrònic es categoritzi com a SPAM. Es poden incloure en el cos del missatge principal o en un <strong>missatge al peu</strong> reutilitzable. Referiu-vos a la documentació en línia pels detall de com incloure els enllaços i informació de contacte requerits com també missatges d'exemple."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp
@@ -1980,7 +1980,7 @@ msgstr "Seleccioneu el tipus financer apropiat per aquest pagament. "
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Plantilla"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
