--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -17,7 +17,8 @@
 # Jaime Bedon <jaimebedon@yahoo.com>, 2015
 # Javier Cardenas <xavi.cardenasd@gmail.com>, 2015
 # carmyman <manuel.rubio.p@gmail.com>, 2012
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
+# Miriam Querol <m.querol@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-26 10:37+0000\n"
+"Last-Translator: Miriam Querol <m.querol@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -378,7 +379,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
-msgstr ""
+msgstr "Test AB creado por"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created Date"
@@ -1763,7 +1764,7 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "New A/B Test"
-msgstr ""
+msgstr "Nuevo A/B Test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
