po: update po/ca_ES/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 15:02+0000\n"
+"PO-Revision-Date: 2016-05-26 09:59+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1173,7 +1173,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Cap contingut per previsualitzar"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
@@ -1185,7 +1185,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Envia un correu electrònic de prova a:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
@@ -1197,11 +1197,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Envia el test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Envia un correu electrònic de prova al grup:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
@@ -1327,7 +1327,7 @@ msgstr ""
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Defineix el mailing"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1399,7 +1399,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
-msgstr ""
+msgstr "Sense destinataris"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~1 recipient"
