--- a/po/ca_ES/case.po
+++ b/po/ca_ES/case.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 15:08+0000\n"
+"PO-Revision-Date: 2016-05-26 12:10+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -922,7 +922,7 @@ msgstr "Afegir membres a %1"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "- select contacts -"
-msgstr ""
+msgstr "- selecciona el contacte -"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "The group %1 has no members."
