--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -5,7 +5,7 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2015
+# francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-26 09:37+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -827,7 +827,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Auto-renewal membership cancelled"
-msgstr ""
+msgstr "S'ha cancel·lat la renovació automàtica de la pertinença"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid ""
