po: update po/ca_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -7,12 +7,12 @@
 # francescbassas <francesc@babu.cat>, 2015-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-17 08:08+0000\n"
+"PO-Revision-Date: 2016-05-26 12:10+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -159,7 +159,7 @@ msgstr "Pagament diferit?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew?"
-msgstr ""
+msgstr "Renovació automàtica?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is a Test?"
@@ -578,7 +578,7 @@ msgstr ""
 #: templates/CRM/Member/Form/MembershipView.tpl
 #: templates/CRM/Member/Form/Selector.tpl templates/CRM/Member/Page/Tab.tpl
 msgid "Auto-renew"
-msgstr ""
+msgstr "Renovació automàtica"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Membership Types Default"
@@ -773,7 +773,7 @@ msgstr "Organització de la pertinença"
 #: CRM/Member/Form/MembershipType.php
 #: templates/CRM/Member/Page/MembershipType.tpl
 msgid "Auto-renew Option"
-msgstr ""
+msgstr "Opció de renovació automàtica"
 
 #: CRM/Member/Form/MembershipType.php
 msgid "Please enter a membership type name."
@@ -1078,7 +1078,7 @@ msgstr "Membres"
 
 #: CRM/Member/Selector/Search.php
 msgid "Auto-renew?"
-msgstr ""
+msgstr "Renovació automàtica?"
 
 #: CRM/Member/Task.php
 msgid "Export Members"
@@ -1156,7 +1156,7 @@ msgstr ""
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Select Membership Organization and then Membership Type."
-msgstr ""
+msgstr "Selecciona l'organització de pertinença i després el tipus de pertinença"
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipType.tpl
@@ -1940,7 +1940,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid "Member Dashboard"
-msgstr ""
+msgstr "Tauler de membres"
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid ""
@@ -1983,7 +1983,7 @@ msgstr "Membres per tipus"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "(Last Month)"
-msgstr ""
+msgstr "(darrer mes)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid " (MTD)"
@@ -2007,17 +2007,17 @@ msgstr ""
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Totals (all types)"
-msgstr ""
+msgstr "Totals (tots els tipus)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid ""
 "Primary member counts (those who \"own\" the membership rather than "
 "receiving via relationship) are in [brackets]."
-msgstr ""
+msgstr "Els comptadors dels membres principals (aquells que \"posseeixen\" la pertinença en comptes de rebre-la via relacions) es troben entre [claudators]."
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Recent Memberships"
-msgstr ""
+msgstr "Pertinences recents"
 
 #: templates/CRM/Member/Page/MembershipStatus.tpl
 msgid ""
